修改编译问题