@@ -35,5 +35,32 @@
     </dependencies>
     <build>
         <finalName>web</finalName>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <configuration>
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>8094</port>
+                            <maxIdleTime>60000</maxIdleTime>
+                        </connector>
+                    </connectors>
+                    <reload>automatic</reload>
+                    <scanIntervalSeconds>0</scanIntervalSeconds>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>org.mortbay.util.URI.charset</name>
+                            <value>UTF-8</value>
+                        </systemProperty>
+                    </systemProperties>
+                    <jvmArgs>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
+                        -Dfile.encoding=UTF-8
+                    </jvmArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
